workaround for node-IDs that are bigger than integer MAX_VALUE